# ai-eda-playground

./: .gitignore  GUIDE.md  LICENSE  README.md  launch_ui.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: prompts.yaml
examples/: counter.yaml
src/: __main__.py  cli.py  generator.py  pipeline.py  simulator.py  synthesizer.py  waveform.py  webui.py
src/config/: prompts.yaml
tests/: conftest.py  test_generator.py  test_multimodule.py  test_pipeline.py  test_simulator.py  test_synthesizer.py  test_waveform.py
